[gd_scene load_steps=5 format=3 uid="uid://bgfbqlt7g4bmi"]

[ext_resource type="Texture2D" uid="uid://bfuoqus5kcx5v" path="res://media/UI/player.png" id="1_b0pmo"]
[ext_resource type="Script" path="res://player_token.gd" id="1_twwtr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_by1rc"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dhh3o"]
radius = 50.0

[node name="PlayerToken" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_twwtr")

[node name="Sprite2D" type="TextureButton" parent="."]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
texture_normal = ExtResource("1_b0pmo")
texture_pressed = ExtResource("1_b0pmo")
texture_hover = ExtResource("1_b0pmo")
texture_disabled = ExtResource("1_b0pmo")
texture_focused = ExtResource("1_b0pmo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_by1rc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dhh3o")

[connection signal="button_down" from="Sprite2D" to="." method="_on_sprite_2d_button_down"]
[connection signal="button_up" from="Sprite2D" to="." method="_on_sprite_2d_button_up"]
[connection signal="toggled" from="Sprite2D" to="." method="_on_sprite_2d_toggled"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
